Abandoned user-scope install and started on DLL.
I was dumb and didn't realize non-privileged users couldn't install
services. Make the whole effort of supporting installation to %appdata%
a waste. Abandoned basing dialogs on WixUI_Advanced and basing it
instead on WixUI_Installdir.

Added new dialog where user can enter details/credentials and hooking it
into a DLL. Started moving code from main service to DLL.

--- a/SetupMSI/CustomDialogSet.wxs
+++ b/SetupMSI/CustomDialogSet.wxs
@@ -5,7 +5,7 @@
     This software is made available under the terms of the MIT License that can
     be found in the LICENSE.rtf file.
      
-    Based on WixUI_InstallDir.wxs and WixUI_Advanced.wxs from Outercurve Foundation. Their copyright: 
+    Based on WixUI_InstallDir.wxs from Outercurve Foundation. Their copyright: 
         Copyright (c) 2004, Outercurve Foundation.
         This software is released under Microsoft Reciprocal License (MS-RL).
         The license and further copyright text can be found in the file
@@ -35,27 +35,6 @@ Patch dialog sequence:
 
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
     <Fragment>
-        <WixVariable Id="WixUISupportPerUser" Value="1" Overridable="yes" />
-        <WixVariable Id="WixUISupportPerMachine" Value="1" Overridable="yes" />
-
-        <CustomAction Id="CustomWixSetDefaultPerUserFolder" Property="WixPerUserFolder" Value="[LocalAppDataFolder][ApplicationFolderName]" Execute="immediate" />
-        <CustomAction Id="CustomWixSetDefaultPerMachineFolder" Property="WixPerMachineFolder" Value="[ProgramFilesFolder][ApplicationFolderName]" Execute="immediate" />
-        <CustomAction Id="CustomWixSetPerUserFolder" Property="APPLICATIONFOLDER" Value="[WixPerUserFolder]" Execute="immediate" />
-        <CustomAction Id="CustomWixSetPerMachineFolder" Property="APPLICATIONFOLDER" Value="[WixPerMachineFolder]" Execute="immediate" />
-
-        <InstallExecuteSequence>
-            <Custom Action="CustomWixSetDefaultPerUserFolder" Before="CostFinalize" />
-            <Custom Action="CustomWixSetDefaultPerMachineFolder" After="CustomWixSetDefaultPerUserFolder" />
-            <Custom Action="CustomWixSetPerUserFolder" After="CustomWixSetDefaultPerMachineFolder">ACTION="INSTALL" AND APPLICATIONFOLDER="" AND (ALLUSERS="" OR (ALLUSERS=2 AND (NOT Privileged)))</Custom>
-            <Custom Action="CustomWixSetPerMachineFolder" After="CustomWixSetPerUserFolder">ACTION="INSTALL" AND APPLICATIONFOLDER="" AND (ALLUSERS=1 OR (ALLUSERS=2 AND Privileged))</Custom>
-        </InstallExecuteSequence>
-        <InstallUISequence>
-            <Custom Action="CustomWixSetDefaultPerUserFolder" Before="CostFinalize" />
-            <Custom Action="CustomWixSetDefaultPerMachineFolder" After="CustomWixSetDefaultPerUserFolder" />
-            <Custom Action="CustomWixSetPerUserFolder" After="CustomWixSetDefaultPerMachineFolder">ACTION="INSTALL" AND APPLICATIONFOLDER="" AND (ALLUSERS="" OR (ALLUSERS=2 AND (NOT Privileged)))</Custom>
-            <Custom Action="CustomWixSetPerMachineFolder" After="CustomWixSetPerUserFolder">ACTION="INSTALL" AND APPLICATIONFOLDER="" AND (ALLUSERS=1 OR (ALLUSERS=2 AND Privileged))</Custom>
-        </InstallUISequence>
-        
         <UI Id="CustomDialogSet">
             <TextStyle Id="WixUI_Font_Normal" FaceName="!(loc.Advanced_Font_FaceName)" Size="!(loc.Advanced_Font_Normal_Size)" />
             <TextStyle Id="WixUI_Font_Bigger" FaceName="!(loc.Advanced_Font_FaceName)" Size="!(loc.Advanced_Font_Bigger_Size)" />
@@ -63,6 +42,7 @@ Patch dialog sequence:
             <TextStyle Id="WixUI_Font_Emphasized" FaceName="!(loc.Advanced_Font_FaceName)" Size="!(loc.Advanced_Font_Emphasized_Size)" Bold="yes" />
 
             <Property Id="DefaultUIFont" Value="WixUI_Font_Normal" />
+            <Property Id="WixUI_Mode" Value="InstallDir" />
 
             <DialogRef Id="BrowseDlg" />
             <DialogRef Id="DiskCostDlg" />
@@ -84,21 +64,16 @@ Patch dialog sequence:
             <Publish Dialog="CustomWelcomeDlg" Control="Next" Event="NewDialog" Value="VerifyReadyDlg">Installed AND PATCH</Publish>
 
             <Publish Dialog="LicenseAgreementDlg" Control="Back" Event="NewDialog" Value="CustomWelcomeDlg">1</Publish>
-            <Publish Dialog="LicenseAgreementDlg" Control="Next" Event="NewDialog" Value="CustomInstallDirDlg">LicenseAccepted = "1"</Publish>
+            <Publish Dialog="LicenseAgreementDlg" Control="Next" Event="NewDialog" Value="CustomRegistrarDlg">LicenseAccepted = "1"</Publish>
 
-            <Publish Dialog="CustomInstallDirDlg" Control="Back" Event="NewDialog" Value="LicenseAgreementDlg">1</Publish>
+            <Publish Dialog="CustomRegistrarDlg" Control="Back" Event="NewDialog" Value="LicenseAgreementDlg">1</Publish>
+            <Publish Dialog="CustomRegistrarDlg" Control="Next" Event="NewDialog" Value="CustomInstallDirDlg">RegistrarValidated = "1"</Publish>
 
-            <!-- override default WixAppFolder of WixPerMachineFolder as standard user won't be shown the radio group to set WixAppFolder -->
-            <Publish Dialog="CustomInstallDirDlg" Control="Next" Property="WixAppFolder" Value="WixPerUserFolder" Order="1">!(wix.WixUISupportPerUser) AND NOT Privileged</Publish>
-            <Publish Dialog="CustomInstallDirDlg" Control="Next" Property="ALLUSERS" Value="{}" Order="2">WixAppFolder = "WixPerUserFolder"</Publish>
-            <Publish Dialog="CustomInstallDirDlg" Control="Next" Property="ALLUSERS" Value="1" Order="3">WixAppFolder = "WixPerMachineFolder"</Publish>
-            <Publish Dialog="CustomInstallDirDlg" Control="Next" Property="APPLICATIONFOLDER" Value="[WixPerUserFolder]" Order="4">WixAppFolder = "WixPerUserFolder"</Publish>
-            <Publish Dialog="CustomInstallDirDlg" Control="Next" Property="APPLICATIONFOLDER" Value="[WixPerMachineFolder]" Order="5">WixAppFolder = "WixPerMachineFolder"</Publish>
-            
-            <Publish Dialog="CustomInstallDirDlg" Control="Next" Event="SetTargetPath" Value="[WIXUI_INSTALLDIR]" Order="6">1</Publish>
-            <Publish Dialog="CustomInstallDirDlg" Control="Next" Event="DoAction" Value="WixUIValidatePath" Order="7">NOT WIXUI_DONTVALIDATEPATH</Publish>
-            <Publish Dialog="CustomInstallDirDlg" Control="Next" Event="SpawnDialog" Value="InvalidDirDlg" Order="8"><![CDATA[NOT WIXUI_DONTVALIDATEPATH AND WIXUI_INSTALLDIR_VALID<>"1"]]></Publish>
-            <Publish Dialog="CustomInstallDirDlg" Control="Next" Event="NewDialog" Value="VerifyReadyDlg" Order="9">WIXUI_DONTVALIDATEPATH OR WIXUI_INSTALLDIR_VALID="1"</Publish>
+            <Publish Dialog="CustomInstallDirDlg" Control="Back" Event="NewDialog" Value="CustomRegistrarDlg">1</Publish>
+            <Publish Dialog="CustomInstallDirDlg" Control="Next" Event="SetTargetPath" Value="[WIXUI_INSTALLDIR]" Order="1">1</Publish>
+            <Publish Dialog="CustomInstallDirDlg" Control="Next" Event="DoAction" Value="WixUIValidatePath" Order="2">NOT WIXUI_DONTVALIDATEPATH</Publish>
+            <Publish Dialog="CustomInstallDirDlg" Control="Next" Event="SpawnDialog" Value="InvalidDirDlg" Order="3"><![CDATA[NOT WIXUI_DONTVALIDATEPATH AND WIXUI_INSTALLDIR_VALID<>"1"]]></Publish>
+            <Publish Dialog="CustomInstallDirDlg" Control="Next" Event="NewDialog" Value="VerifyReadyDlg" Order="4">WIXUI_DONTVALIDATEPATH OR WIXUI_INSTALLDIR_VALID="1"</Publish>
             <Publish Dialog="CustomInstallDirDlg" Control="ChangeFolder" Property="_BrowseProperty" Value="[WIXUI_INSTALLDIR]" Order="1">1</Publish>
             <Publish Dialog="CustomInstallDirDlg" Control="ChangeFolder" Event="SpawnDialog" Value="BrowseDlg" Order="2">1</Publish>
 
@@ -111,9 +86,10 @@ Patch dialog sequence:
             <Publish Dialog="MaintenanceTypeDlg" Control="RepairButton" Event="NewDialog" Value="VerifyReadyDlg">1</Publish>
             <Publish Dialog="MaintenanceTypeDlg" Control="RemoveButton" Event="NewDialog" Value="VerifyReadyDlg">1</Publish>
             <Publish Dialog="MaintenanceTypeDlg" Control="Back" Event="NewDialog" Value="MaintenanceWelcomeDlg">1</Publish>
+
+            <Property Id="ARPNOMODIFY" Value="1" />
         </UI>
 
-        <Property Id="WIXUI_INSTALLDIR" Value="APPLICATIONFOLDER" />
         <UIRef Id="WixUI_Common" />
     </Fragment>
 </Wix>
