--- a/SetupMSI/Product.wxs
+++ b/SetupMSI/Product.wxs
@@ -29,8 +29,7 @@
 
         <!-- Properties and Variables. -->
         <Property Id="MSIFASTINSTALL" Value="1" /> <!-- Don't set a restore point in Win7 and up. -->
-        <Property Id="ApplicationFolderName" Value="UnofficialDDNS" />
-        <Property Id="WixAppFolder" Value="WixPerMachineFolder" />
+        <Property Id="WIXUI_INSTALLDIR" Value="INSTALLDIR" />
         <WixVariable Id="WixUILicenseRtf" Value="LICENSE.rtf" />
         <WixVariable Id="WixUIBannerBmp" Value="bannrbmp.bmp" />
         <WixVariable Id="WixUIDialogBmp" Value="dlgbmp.bmp" />
@@ -39,13 +38,13 @@
 	<Fragment>
 		<Directory Id="TARGETDIR" Name="SourceDir">
 			<Directory Id="ProgramFilesFolder">
-				<Directory Id="APPLICATIONFOLDER" Name="UnofficialDDNS" />
+				<Directory Id="INSTALLDIR" Name="UnofficialDDNS" />
 			</Directory>
 		</Directory>
 	</Fragment>
 
 	<Fragment>
-		<ComponentGroup Id="ProductComponents" Directory="APPLICATIONFOLDER">
+		<ComponentGroup Id="ProductComponents" Directory="INSTALLDIR">
 			<Component Id="ProductComponent">
                 <File Id="UnofficialDDNSExe" Name="UnofficialDDNS.exe"
                       Source="../UnofficialDDNS/bin/Debug/UnofficialDDNS.exe" KeyPath="yes" />
