--- a/SetupMSI/CustomRegistrarDlg.wxs
+++ b/SetupMSI/CustomRegistrarDlg.wxs
@@ -18,11 +18,14 @@
         //  Set checkmarks/crosses for each field from Windows icon files.
         * Check how DLL works with welcome dialog when .net 4.5 isnt installed.
         * In welcome dialog error messages, maybe use license text field to allow users to copy/paste?
+        ***** Use HideTarget for credentials being passed to custom action.
+        * Fix keyboard navigation.
+        * Does FolderDialog auto-locate parent path?
+        * Use Vista dialog instead.
   </todo>
 -->
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
     <Fragment>
-        <Binary Id="UDDNSQuery.CA.dll" SourceFile="..\UDDNSQuery\bin\$(var.Configuration)\UDDNSQuery.CA.dll" />
         <CustomAction Id="PopulateRegistrarList" BinaryKey="UDDNSQuery.CA.dll" DllEntry="PopulateRegistrarList" Execute="immediate" />
         
         <InstallExecuteSequence>
